--- a/get-jwt-token.html
+++ b/get-jwt-token.html
@@ -130,7 +130,7 @@
             result.innerHTML = '<div class="info">🔄 Testing external API...</div>';
 
             try {
-                const response = await fetch('https://qa-api.resolveindia.com/worker-master-leave', {
+                const response = await fetch('https://apiv1.resolvepay.in/worker-master-leave', {
                     headers: {
                         'Authorization': `Bearer ${token}`,
                         'Content-Type': 'application/json'
